--- a/src/components/SideBar.css
+++ b/src/components/SideBar.css
@@ -118,8 +118,7 @@
     top: 3px;
     left: 3px;
     border: 2px;
-    background: #FFFFFF;
-    border: 2px solid #FFFFFF;
+    border: 2px solid #0000;
 }
 #dashboardtext{
     width: 83px;
