--- a/src/components/ToDo.css
+++ b/src/components/ToDo.css
@@ -20,10 +20,26 @@
     border-bottom-style: solid;
 }
 
+.group1737{
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    top: 25px;
+}
+
+#bell{
+    position: absolute;
+    left:4px;
+    top:2px;
+    height:15px;
+    border-radius: 5px;
+}
+
 .todo-text {
+    left:50px;
     flex-grow: 1;
     position: absolute;
-    width: 450px;
+    width: 400px;
     top: 25%;
     bottom: 25%;
     font-family: 'Inter';
@@ -130,7 +146,7 @@
     position: absolute;
     width: 78px;
     height: 30px;
-    left:10px;
+    left:50px;
     top: 40px;
     border-radius: 24px;
     width: 78px;
