--- a/src/components/ToDo.css
+++ b/src/components/ToDo.css
@@ -220,197 +220,45 @@
 }
 
 
-  
-
-/* given styling */
-
-/* .container{
+.chart-container{
     position: absolute;
-    width: 656px;
-    height: 632px;
-    left: 296px;
-    top: 248px;
-    background-color:burlywood;
-} */
+width: 440px;
+height: 295px;
+left: 976px;
+top: 580px;
+border: 1px solid #D0D5DD;
+border-radius: 8px;
+}
 
-/* .header{
-    position: absolute;
+.container-header{
+    width: 440px;
+    height: 57px;
+    left: 976px;
+    top: 627px;
+    border-bottom: 1px solid #D0D5DD;
+
+}
+
+#chartheading{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    width: Fixed (656px);
-    height: Hug (36px);
-    top: 248px;
-    left: 296px;
-    padding: 12px, 0px, 0px, 0px;
+    padding: 0px 10px 0px;
     gap: 16px;
-    background-color: brown;
-} */
+    width: 436px;
+    height: 54px;
+    left: 976px;
+    top: 627px;
+    font-weight: 600;
+}
 
-/* #headername{
-    width: 45px;
-    height: 24px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    color: #000000;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-} */
+.pie-chart{
+    width: 148px;
+    height: 148px;
+    left: 2071px;
+    top: 708px;
+    margin-left: 50px; 
+    margin-top: 50px;
+}
 
-/* .frame67{
-    
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 0px 16px;
-    gap: 471px;
-    width: 656px;
-    height: 24px;
-    flex: none;
-    order: 0;
-    align-self: stretch;
-    flex-grow: 0;
-} */
-
-/* .frame65{    
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 0px;
-    gap: 8px;
-    width: 45px;
-    height: 24px;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-} */
-
-/* .frame64{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 0px;
-    gap: 8px;
-    width: 45px;
-    height: 24px;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-    } */
-
-    /* item4 */
-/* .item4{
-        position: absolute;
-        width: 656px;
-        height: 48px;
-        left: 296px;
-        top: 297px;
-        display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    background-color: brown;
-    } */
-
-/* .group1737{
-        position: absolute;
-        width: 20px;
-        height: 20px;
-        left: 16px;
-        top: 14px;
-    } */
-
-/* .rectangle656{
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    left: 16px;
-    top: 14px;
-    background: #2F80ED;
-    border-radius: 4px;
-} */
-
-/* .cellbadge{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 2px 8px;
-    gap: 6px;
-    position: absolute;
-    width: 47px;
-    height: 26px;
-    left: 540px;
-    top: 11px;
-    background: #E8F5E9;
-    border-radius: 16px;
-} */
-
-/* .label{
-    width: 31px;
-    height: 22px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 22px;
-    text-align: center;
-    color: #219653;
-    flex: none;
-    order: 1;
-} */
-/* 
-.bell{
-    position: absolute;
-    width: 12px;
-    height: 12px;
-    left: 20px;
-    top: 18px;
-} */
-
-/* #bellring{
-    position: absolute;
-    left: 10.61%;
-    right: 10.61%;
-    top: 8.33%;
-    bottom: 8.33%;
-    border: 1px solid #E8F5E9;
-} */
-
-/* .totalgroceries{
-    position: absolute;
-    left: 91.62%;
-    right: 2.44%;
-    top: 27.08%;
-    bottom: 27.08%;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 22px;
-    display: flex;
-    align-items: center;
-    text-align: right;    
-    color: #757575;
-} */
-
-/* .todolist{
-    position: absolute;
-    width: 301px;
-    left: 44px;
-    top: 25%;
-    bottom: 25%;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 24px;
-    display: flex;
-    align-items: center;
-    color: #000000;
-} */
